changed margin so footer doesnt overlap with last line of main section, last line of animal details is no longer hidden ny footer

--- a/css/find-pet.css
+++ b/css/find-pet.css
@@ -96,7 +96,8 @@ body
 main {
   color: #303841;
   font-family: 'Arima Madurai', cursive;
-  width: 100%;
+  overflow: hidden;
+  margin-bottom: 50px;
 }
 
 main h1 {
@@ -117,8 +118,8 @@ div{
   flex-wrap: wrap;
 }
 img{
-  width:400px;
-  height: 400px;
+  width:412px;
+  height: 310px;
   margin: 40px 10px 30px 30px;
 }
 div ul li{
